welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:6: error: type mismatch;
 found   : Unit
 required: Int
  if((a==b && b!=c)|| (a==c && b!=c)||(b==c && a!=c))
  ^